@@ -1,3 +1,9 @@
+2007-12-05  Dan Williams  <dcbw@redhat.com>
+
+	* src/vpn-properties/nm-vpn-properties.c
+		- (fixup_nm_connection_vpn): ensure the resulting NMConnection is valid
+			before trying to use it
+
 2007-12-04  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
